@@ -2,7 +2,7 @@ AC_INIT(cc_lib.c)
 AC_CANONICAL_SYSTEM
 AC_PREFIX_DEFAULT()
 
-AM_INIT_AUTOMAKE(pam_ccreds, 7)
+AM_INIT_AUTOMAKE(pam_ccreds, 8)
 AM_CONFIG_HEADER(config.h)
 AM_MAINTAINER_MODE
 
